--- a/Timesheets/Views/TimesheetEntries/Index.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Index.cshtml
@@ -4,94 +4,94 @@
     ViewData["Title"] = "Index";
 }
 
-    <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-            <div class="container-fluid">
-                <div class="row mb-2">
-                    <div class="col-sm-6">
-                        <h1>Timesheet Entries</h1>
-                    </div>
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1>Timesheet Entries</h1>
                 </div>
-            </div><!-- /.container-fluid -->
-        </section>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
 
-        <section class="content">
-            <div class="row form-group">
-                <div class="col-xl-10 offset-xl-1">
-                    <div class="card-tools">
-                        <form asp-action="Index" method="get">
-                            <div class="input-group input-group-sm" style="width: 150px;">
+    <section class="content">
+        <div class="row form-group">
+            <div class="col-xl-10 offset-xl-1">
+                <div class="card-tools">
+                    <form asp-action="Index" method="get">
+                        <div class="input-group input-group-sm" style="width: 150px;">
 
-                                <input type="text" name="searchString" value="@ViewBag.SearchString" placeholder="Filter Entries" class="form-control float-right">
-                                <div class="input-group-append">
-                                    <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-                                </div>
-
+                            <input type="text" name="searchString" value="@ViewBag.SearchString" placeholder="Filter Entries" class="form-control float-right">
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
                             </div>
-                        </form>
-                    </div>
+
+                        </div>
+                    </form>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xl-10 offset-xl-1">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">Timesheet Entries</h3>
-                        </div>
-                        <!-- /.card-header -->
-                        <div class="card-body p-0">
-                            <table class="table table-striped">
-                                <thead>
+        </div>
+        <div class="row">
+            <div class="col-xl-10 offset-xl-1">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">Timesheet Entries</h3>
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-body table-responsive p-0" style="max-height: 425px;">
+                        <table class="table table-head-fixed">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.DateCreated) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.DateSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.HoursWorked) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.HoursWorkedSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.User) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.UserNameSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Project) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.ProjectSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
+                                    </th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
                                     <tr>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.DateCreated) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.DateSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.HoursWorked) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.HoursWorkedSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.User) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.UserNameSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.Project) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.ProjectSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
-                                        </th>
-                                        <th></th>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.DateCreated)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.HoursWorked)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.User.FirstName) @Html.DisplayFor(modelItem => item.User.LastName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Project.Name)
+                                        </td>
+                                        <td>
+                                            <a class="btn btn-primary fa fa-pen font-weight-bold" asp-action="Edit" asp-route-id="@item.TimesheetEntryId"></a>
+                                            <a class="btn btn-info fa fa-eye font-weight-bold" asp-action="Details" asp-route-id="@item.TimesheetEntryId"></a>
+                                            <a class="btn btn-danger fa fa-trash-alt font-weight-bold" asp-action="Delete" asp-route-id="@item.TimesheetEntryId"></a>
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.DateCreated)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.HoursWorked)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.User.FirstName) @Html.DisplayFor(modelItem => item.User.LastName)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Project.Name)
-                                            </td>
-                                            <td>
-                                                <a class="btn btn-primary fa fa-pen font-weight-bold" asp-action="Edit" asp-route-id="@item.TimesheetEntryId"></a>
-                                                <a class="btn btn-info fa fa-eye font-weight-bold" asp-action="Details" asp-route-id="@item.TimesheetEntryId"></a>
-                                                <a class="btn btn-danger fa fa-trash-alt font-weight-bold" asp-action="Delete" asp-route-id="@item.TimesheetEntryId"></a>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- /.card-body -->
+                                }
+                            </tbody>
+                        </table>
                     </div>
+                    <!-- /.card-body -->
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xl-10 offset-xl-1">
-                    <a class="btn btn-primary" asp-action="Create">Create New</a>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-10 offset-xl-1">
+                <a class="btn btn-primary" asp-action="Create">Create New</a>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
+</div>
