--- a/Timesheets/Views/Projects/Create.cshtml
+++ b/Timesheets/Views/Projects/Create.cshtml
@@ -45,7 +45,7 @@
                                     <div class="form-group">
                                         <label asp-for="OwnerDepartment" class="control-label"></label>
                                         <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.Departments">
-                                            <option value="">Select Owner of the Department</option>
+                                            <option value="">Select Owner Department</option>
                                         </select>
                                         <span asp-validation-for="OwnerDepartmentId" class="text-danger"></span>
                                     </div>
