--- a/Timesheets/Views/Projects/Edit.cshtml
+++ b/Timesheets/Views/Projects/Edit.cshtml
@@ -37,12 +37,14 @@
                                 <input type="hidden" asp-for="ProjectId" />
                                 <div class="form-group">
                                     <label asp-for="Name" class="control-label"></label>
-                                    <input asp-for="Name" class="form-control" />
+                                    <input asp-for="Name" class="form-control" required/>
                                     <span asp-validation-for="Name" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="OwnerDepartment" class="control-label"></label>
-                                    <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.Departments"></select>
+                                    <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.Departments" required>
+                                        <option value="">Select Owner Department</option>
+                                    </select>
                                     <span asp-validation-for="OwnerDepartmentId" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
