--- a/Timesheets/Views/TimesheetEntries/Create.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Create.cshtml
@@ -39,21 +39,28 @@
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
                                     <label asp-for="DateCreated" class="control-label"></label>
-                                    <input asp-for="DateCreated" class="form-control" />
+                                    <input asp-for="DateCreated" class="form-control" required />
                                     <span asp-validation-for="DateCreated" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="HoursWorked" class="control-label"></label>
-                                    <input asp-for="HoursWorked" class="form-control" />
+                                    <input asp-for="HoursWorked" class="form-control" required />
                                     <span asp-validation-for="HoursWorked" class="text-danger"></span>
                                 </div>
-                                <div class="form-group">
-                                    <label asp-for="User" class="control-label"></label>
-                                    <select asp-for="UserId" asp-items="ViewBag.ApplicationUsers" class="form-control" required>
-                                        <option value="">Select User</option>
-                                    </select>
-                                    <span asp-validation-for="UserId" class="text-danger"></span>
-                                </div>
+                                @if (!User.IsInRole("Employee"))
+                                {
+                                    <div class="form-group">
+                                        <label asp-for="User" class="control-label"></label>
+                                        <select asp-for="UserId" asp-items="ViewBag.ApplicationUsers" class="form-control" required>
+                                            <option value="">Select User</option>
+                                        </select>
+                                        <span asp-validation-for="UserId" class="text-danger"></span>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <input asp-for="UserId" value="@ViewData["CurrentUserId"]" hidden />
+                                }
                                 <div class="form-group">
                                     <label asp-for="Project" class="control-label"></label>
                                     <select asp-for="ProjectId" asp-items="ViewBag.Projects" class="form-control" required>
