--- a/Timesheets/Views/Shared/_Layout.cshtml
+++ b/Timesheets/Views/Shared/_Layout.cshtml
@@ -184,7 +184,7 @@
          @RenderBody()
          <footer class="main-footer">
              <div class="container text-center">
-                 <strong>Netherlands - Timessheets - Mind the Code</strong>
+                 <strong>&copy; 2019 - Netherlands - Timesheets - Mind the Code</strong>
              </div>
          </footer>
 
