--- a/Timesheets/Views/Users/Delete.cshtml
+++ b/Timesheets/Views/Users/Delete.cshtml
@@ -48,7 +48,8 @@
                                 </dl>
                                 <form asp-action="Delete">
                                     <input type="hidden" asp-for="Id" />
-                                    <input type="submit" value="Delete" class="btn btn-danger" />
+                                    <input type="submit" value="Delete" class="btn btn-danger" 
+                                           onclick="return confirm('Are you sure you want to delete this User? All their Timesheet Entries will also be deleted!');"/>
                                     <a class="btn btn-secondary" asp-action="Index">Back to User List</a>
                                 </form>
                             </div>
