--- a/Timesheets/Views/Departments/Edit.cshtml
+++ b/Timesheets/Views/Departments/Edit.cshtml
@@ -37,7 +37,7 @@
                                 <input type="hidden" asp-for="DepartmentId" />
                                 <div class="form-group">
                                     <label asp-for="Name" class="control-label"></label>
-                                    <input asp-for="Name" class="form-control" />
+                                    <input asp-for="Name" class="form-control" required />
                                     <span asp-validation-for="Name" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
