--- a/Timesheets/Views/Projects/Create.cshtml
+++ b/Timesheets/Views/Projects/Create.cshtml
@@ -44,7 +44,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label asp-for="OwnerDepartment" class="control-label"></label>
-                                        <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.Departments">
+                                        <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.Departments" required>
                                             <option value="">Select Owner Department</option>
                                         </select>
                                         <span asp-validation-for="OwnerDepartmentId" class="text-danger"></span>
